[NOT COMPILEABLE] Diving strategy implemented for path constructions
[NOT COMPILEABLE] Diving strategy implemented for path constructions